--- a/example.html
+++ b/example.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="slick.css">
 </head>
 <body>
+    <div class="container-fluid">
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
@@ -163,6 +164,7 @@ span.onclick = function() {
   slidesToScroll:1
 });
     </script>
+    </div>
 </body>
 
 
