--- a/history.html
+++ b/history.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="slick.css">
 </head>
 <body>
+    <div class="container-fluid">
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
@@ -157,7 +158,7 @@ span.onclick = function() {
   slidesToShow: 3,
   slidesToScroll:1
     });</script>
-    
+    </div>
 </body>
 
 
