--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="slick.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
@@ -144,6 +145,7 @@ span.onclick = function() {
   slidesToScroll:1
 });
     </script>
+        </div>
 </body>
 
 
