--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="slick.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
