--- a/conception.html
+++ b/conception.html
@@ -20,7 +20,7 @@
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
-            <a class="nav-link classJavaText animate__animated animate__pulse" href="index.html">Java</a> 
+            <a class="nav-link classJavaText animate__animated animate__bounceInDown" href="index.html">Java</a> 
             </h1>
             <div class="col-md-4">
        <nav class="navbar navbar-expand-lg navbar-light transit"  style="float: right">
@@ -85,7 +85,7 @@
   <!-- Modal Caption (Image Text) -->
   <div id="caption"></div>
 </div>
-            <div class="col-md-8" style="float: left">                
+            <div class="col-md-8 classJavaText animate__animated animate__pulse" style="float: left">                
                 <strong>Концепція</strong><br>
                 ООП в java базується на ряді понять (або ж концепцій): Клас - певна абстрактна сутність, наприклад, "Пес", "Кіт", "Автомобіль", "Ціна товару", що на програмному рівні представлена змінними (полями даних) та методами, що оперують над цими полями даних. Об'єкт - конкретний екземпляр класу. Наприклад, зелена "Тойота" вашого сусіда є екземпляром класу "Автомобіль". По суті, це клас, поля якого ініціалізовані і він завантажений у пам'ять комп'ютера.
                 <p><br>
