--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="slick.css">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" >
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
-            <a class="nav-link classJavaText animate__animated animate__pulse" href="index.html">Java</a> 
+            <a class="nav-link classJavaText animate__animated animate__bounceInDown" href="index.html">Java</a> 
             </h1>
             <div class="col-md-4">
        <nav class="navbar navbar-expand-lg navbar-light transit"  style="float: right">
@@ -84,7 +84,7 @@
   <!-- Modal Caption (Image Text) -->
   <div id="caption"></div>
 </div>
-            <div id="bottomBody" class="col-md-8" style="float: left">
+            <div id="bottomBody" class="col-md-8 classJavaText animate__animated animate__pulse" style="float: left">
         <strong>Курси джава</strong><br>
                 Це реальний досвід роботи на комерційному проекті, ти отримуєш запис в резюме (Trainee at Foxminded Software) і перед тобою відкривається неймовірний IT всесвіт!<br>
                 <a href="https://java.lviv.ua/?roistat=google7_g_51128475724_273332263637_%D0%BA%D1%83%D1%80%D1%81%D0%B8%20%D0%B4%D0%B6%D0%B0%D0%B2%D0%B0&roistat_referrer=&roistat_pos=&gclid=EAIaIQobChMIuPWbk5nZ6AIVSYuyCh2DngNeEAAYAyAAEgJG5PD_BwE">Завітай в Logos Java Academy</a>
