--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
     <header>
         <div class="row">
         <h1 class="classJavaText col-md-8">
-            <a class="nav-link classJavaText animate__animated animate__pulse" href="index.html">Java</a> 
+            <a class="nav-link classJavaText animate__animated animate__bounceInDown" href="index.html">Java</a> 
             </h1>
             <div class="col-md-4">
        <nav class="navbar navbar-expand-lg navbar-light transit"  style="float: right">
@@ -85,7 +85,7 @@
   <!-- Modal Caption (Image Text) -->
   <div id="caption"></div>
 </div>
-                <div id="bottomBody" class="col-md-8" style="float: left">
+                <div id="bottomBody" class="col-md-8 classJavaText animate__animated animate__pulse" style="float: left">
                     
                     <strong>Історія</strong><br>
                 Мова програмування Java зародилася в 1991 р. в лабораторіях компанії Sun Microsystems. Розробку проекту започаткував Джеймс Ґослінґ, сам проект мав назву «Green» (Зелений). Створення першої робочої версії, яка мала назву «Oak» (дуб), зайняло 18 місяців. Оскільки виявилось, що ім'я Oak уже використовувалось іншою фірмою, то в результаті тривалих суперечок навколо назви нової мови з-поміж ряду запропонованих було вибрано назву Java, у 1995 р. мову було офіційно перейменовано.
